tests/semantic/assign_err1.expected

Semantic Error [line 5]: value: "test"
	Array 'test' used without index. An index must be specified
