tests/semantic/assign_err1.mtp
var test : array(20) of integer;

begin

	test := 2
end.